        Reviewed by Anders.

- next step for http://bugs.webkit.org/show_bug.cgi?id=17257
          start ref counts at 1 instead of 0 for speed

        * wtf/RefCounted.h:
        (WTF::RefCounted::RefCounted): Have refcounts default to 1. This allows us to start
        removing the explicit initialization of RefCounted from classes and eventually we
        can remove the ability to have the initial count of 0 entirely.



Canonical link: https://commits.webkit.org/24136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30406 268f45cc-cd09-0410-ab3c-d52691b4dbfc